# mdvis

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
config/: default.yaml
docs/: README.md
docs/_visualizations/: class_hierarchy.md  dependencies.md  overview.md
docs/mdvis/: __init__.md  cli.md
docs/mdvis/analysis/: __init__.md  async_patterns.md  events.md  metrics.md  types.md
docs/mdvis/config/: __init__.md  manager.md  schema.md
docs/mdvis/core/: __init__.md  indexer.md  parser.md  processor.md  scanner.md
docs/mdvis/models/: __init__.md  elements.md  index.md
docs/mdvis/output/: __init__.md  obsidian.md  templates.md  visualizations.md
docs/mdvis/utils/: __init__.md  async_helpers.md  text_processing.md
docs/src/mdvis/: __init__.md  cli.md
docs/src/mdvis/analysis/: __init__.md  async_patterns.md  events.md  metrics.md  types.md
docs/src/mdvis/config/: __init__.md  manager.md  schema.md
docs/src/mdvis/core/: __init__.md  indexer.md  parser.md  processor.md  scanner.md
docs/src/mdvis/models/: __init__.md  elements.md  index.md
docs/src/mdvis/output/: __init__.md  obsidian.md  templates.md  visualizations.md
docs/src/mdvis/utils/: __init__.md  async_helpers.md  text_processing.md
examples/: generate_docs.py
src/: main.py
src/core/: event_documentation.py  generator.py  linter.py  parser.py  scanner.py  visualizer.py  watcher.py
src/mdvis/: __init__.py  cli.py
src/mdvis/config/: __init__.py  manager.py  schema.py
src/mdvis/core/: __init__.py  indexer.py  parser.py  processor.py  scanner.py
src/mdvis/models/: __init__.py  elements.py  index.py
src/mdvis/output/: __init__.py  obsidian.py  templates.py  visualizations.py
src/mdvis/utils/: __init__.py  async_helpers.py  text_processing.py
src/models/: code_elements.py
src/utils/: config.py
tests/: test_generator.py  test_linter.py  test_parser.py  test_scanner.py
